Possible fix for Spotify Tile Alignment Issues.

--- a/src/app/components/chat/chat.component.css
+++ b/src/app/components/chat/chat.component.css
@@ -36,7 +36,7 @@
 }
 .spotify {
   position: absolute;
-  margin-top: -150px;
+  margin-top: -10em;
   box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
   border-radius: .3rem;
 }
@@ -109,9 +109,6 @@
   }
   .v-scroll-card {
     width: 11%;
-  }
-  .spotify {
-    margin-top: -293px;
   }
   .v-scroll-row {
     height: 27em;
